--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 class="title">Welcome to Flex index page</h1>
-<article class="content">
+<content class="content">
     <div class="contentItem">1</div>
     <div class="contentItem">2</div>
     <div class="contentItem">3</div>
@@ -18,10 +18,28 @@
     <div class="contentItem">8</div>
     <div class="contentItem">9</div>
     <div class="contentItem">10</div>
-</article>
+</content>
 
 <fieldset>
-    sdsdf
+    <h3>Detail Summary</h3>
+    <dl class="desSection">
+        <dt>Flex container</dt>
+        <ul>
+            <li>
+                <dl>
+                    <dt>display: flex</dt>
+                    <dd>Flex是Flexible Box的缩写，意为"弹性布局"，用来为盒状模型提供最大的灵活性。任何一个容器都可以指定为Flex布局。
+                        .box{display: flex;}。行内元素也可以使用Flex布局。.box{display: inline-flex;}</dd>
+                </dl>
+            </li>
+            <li>flex-direction</li>
+            <li>flex-wrap</li>
+            <li>flex-flow</li>
+            <li>justify-content</li>
+            <li>align-items</li>
+            <li>align-content</li>
+        </ul>
+    </dl>
 </fieldset>
 
 </body>
