add more description

--- a/index.html
+++ b/index.html
@@ -22,24 +22,152 @@
 
 <fieldset>
     <h3>Detail Summary</h3>
-    <dl class="desSection">
-        <dt>Flex container</dt>
+    <h5>采用Flex布局的元素，称为Flex容器（flex container），简称"容器"。它的所有子元素自动成为容器成员，称为Flex项目（flex item），简称"项目"。</h5>
+    <details class="desSection">
+        <summary>Flex Container</summary>
         <ul>
             <li>
-                <dl>
-                    <dt>display: flex</dt>
+                <details>
+                    <summary>display: flex</summary>
                     <dd>Flex是Flexible Box的缩写，意为"弹性布局"，用来为盒状模型提供最大的灵活性。任何一个容器都可以指定为Flex布局。
                         .box{display: flex;}。行内元素也可以使用Flex布局。.box{display: inline-flex;}</dd>
-                </dl>
+                </details>
             </li>
-            <li>flex-direction</li>
-            <li>flex-wrap</li>
-            <li>flex-flow</li>
-            <li>justify-content</li>
-            <li>align-items</li>
-            <li>align-content</li>
+            <li>
+                <details>
+                    <summary>flex-direction</summary>
+                    <dd>决定主轴的方向（即项目的排列方向）如：.box {flex-direction: row | row-reverse | column | column-reverse;}</dd>
+                    <dd>
+                        <ul>
+                            <li>row（默认值）：主轴为水平方向，起点在左端。</li>
+                            <li>row-reverse：主轴为水平方向，起点在右端。</li>
+                            <li>column：主轴为垂直方向，起点在上沿。</li>
+                            <li>column-reverse：主轴为垂直方向，起点在下沿。</li>
+                        </ul>
+                    </dd>
+                </details>
+
+            </li>
+            <li>
+                <details>
+                    <summary>flex-wrap</summary>
+                    <dd>默认情况下，项目都排在一条线（又称"轴线"）上。flex-wrap属性定义，如果一条轴线排不下，如何换行。.box{flex-wrap: nowrap | wrap | wrap-reverse;}</dd>
+                    <dd>
+                        <ul>
+                            <li>nowrap（默认）：不换行。</li>
+                            <li>wrap：换行，第一行在上方。</li>
+                            <li>wrap-reverse：换行，第一行在下方。</li>
+                        </ul>
+                    </dd>
+                </details>
+
+            </li>
+            <li>
+                <details>
+                    <summary>flex-flow</summary>
+                    <dd>flex-flow属性是flex-direction属性和flex-wrap属性的简写形式，.box {flex-flow: flex-direction || flex-wrap;}  默认值为row nowrap</dd>
+                </details>
+
+            </li>
+            <li>
+                <details>
+                    <summary>justify-content</summary>
+                    <dd>属性定义了项目在主轴上的对齐方式。.box{justify-content: flex-start | flex-end | center | space-between | space-around;}</dd>
+                    <dd>
+                        <ul>
+                            <li>flex-start（默认值）：左对齐</li>
+                            <li>flex-end：右对齐</li>
+                            <li>center： 居中</li>
+                            <li>space-between：两端对齐，项目之间的间隔都相等。</li>
+                            <li>space-around：每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍。</li>
+                        </ul>
+                    </dd>
+                </details>
+
+            </li>
+            <li>
+                <details>
+                    <summary>align-items</summary>
+                    <dd>属性定义项目在交叉轴上如何对齐。.box{align-items: flex-start | flex-end | center | baseline | stretch;}</dd>
+                    <dd>
+                        <ul>
+                            <li>flex-start：交叉轴的起点对齐。</li>
+                            <li>flex-end：交叉轴的终点对齐。</li>
+                            <li>center：交叉轴的中点对齐。</li>
+                            <li>baseline: 项目的第一行文字的基线对齐。</li>
+                            <li>stretch（默认值）：如果项目未设置高度或设为auto，将占满整个容器的高度。</li>
+                        </ul>
+                    </dd>
+                </details>
+
+            </li>
+            <li>
+                <details>
+                    <summary>align-content</summary>
+                    <dd>定义了多根轴线的对齐方式。如果项目只有一根轴线，该属性不起作用。
+                        .box{align-content: flex-start | flex-end | center | space-between | space-around | stretch;}</dd>
+                    <dd>
+                        <ul>
+                            <li>flex-start：与交叉轴的起点对齐。</li>
+                            <li>flex-end：与交叉轴的终点对齐。</li>
+                            <li>center：与交叉轴的中点对齐。</li>
+                            <li>space-between：与交叉轴两端对齐，轴线之间的间隔平均分布。</li>
+                            <li>space-around：每根轴线两侧的间隔都相等。所以，轴线之间的间隔比轴线与边框的间隔大一倍。</li>
+                            <li>stretch（默认值）：轴线占满整个交叉轴。</li>
+                        </ul>
+                    </dd>
+                </details>
+
+            </li>
         </ul>
-    </dl>
+    </details>
+
+    <details class="desSection">
+        <summary>Flex Items</summary>
+        <dd></dd>
+        <ul>
+            <li>
+                <details>
+                    <summary>order</summary>
+                    <dd>定义项目的排列顺序。数值越小，排列越靠前，默认为0。.item {order: /integer/;}</dd>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>flex-grow</summary>
+                    <dd>定义项目的放大比例，默认为0，即如果存在剩余空间，也不放大。.item {flex-grow: /number/; /* default 0 */}</dd>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>flex-shrink</summary>
+                    <dd>定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。.item {flex-shrink: /number/; /* default 0 */}</dd>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>flex-basis</summary>
+                    <dd>flex-basis属性定义了在分配多余空间之前，项目占据的主轴空间（main size）。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为auto，即项目的本来大小。
+                        .item {flex-basis: /length/ | auto; /* default auto */}</dd>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>flex</summary>
+                    <dd>flex属性是flex-grow, flex-shrink 和 flex-basis的简写，默认值为0 1 auto。后两个属性可选。
+                        .item {flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]}</dd>
+                    <dd>该属性有两个快捷值：auto (1 1 auto) 和 none (0 0 auto)。</dd>
+                </details>
+            </li>
+            <li>
+                <details>
+                    <summary>align-self</summary>
+                    <dd>允许单个项目有与其他项目不一样的对齐方式，可覆盖align-items属性。默认值为auto，表示继承父元素的align-items属性，如果没有父元素，则等同于stretch。
+                        .item {align-self: auto | flex-start | flex-end | center | baseline | stretch;}</dd>
+                </details>
+            </li>
+        </ul>
+    </details>
 </fieldset>
 
 </body>
